Feature/code refactor cleanup (#16)
* Removed inconsistencies from the code

* Code cleanup

* Refactor gave errors

* Added stringbuilder, use the built in arraycopy for added performance

* Ignore catch, improve array filling, use math.max instead of manual max

* Update src/main/java/com/thevoxelbox/voxelsniper/brush/BlendBrushBase.java

Co-authored-by: Lennart99 <le.le@live.nl>

* Apply suggestions from code review

Co-authored-by: Lennart99 <le.le@live.nl>

* Optimized imports, resolved conversations

* Update src/main/java/com/thevoxelbox/voxelsniper/util/BlockHelper.java

Co-authored-by: Lennart99 <le.le@live.nl>

* Remove double arraylist

Co-authored-by: Lennart99 <le.le@live.nl>